# django-document-generator

./: .env.example  .flake8  README.md  pyproject.toml
project/settings/: __init__.py  base.py  database.py
